[project]
name = "lora-training-in-comfy"
description = "If you see this message, your ComfyUI-Manager is outdated.\nRecent channel provides only the list of the latest nodes. If you want to find the complete node list, please go to the Default channel.\nMaking LoRA has never been easier!"
version = "1.0.0"
license = "LICENSE"
dependencies = ["accelerate==0.23.0", "transformers==4.30.2", "diffusers[torch]", "ftfy", "opencv-python", "einops", "pytorch-lightning", "tensorboard", "safetensors", "altair", "easygui", "toml", "voluptuous", "huggingface-hub", "open-clip-torch", "# extra", "rich", "pandas", "scipy", "requests", "pillow", "numpy", "gradio==3.41.2", "fastapi", "uvicorn", "lion-pytorch", "lycoris-lora", "prodigyopt", "dadaptation", "wandb", "httpx", "xformers", "# bitsandbytes", "bitsandbytes"]

[project.urls]
Repository = "https://github.com/LarryJane491/Lora-Training-in-Comfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Lora-Training-in-Comfy"
Icon = ""
